<resources>
    <string name="app_name">HomeTest</string>

   <string name="service_title">Dịch Vụ Tiện Ích</string>
    
    <string name="bank_title">Ưu đãi &amp; hợp tác</string>
    <string name="bank_detail">Các ưu đãi cho chủ thẻ ngân hàng</string>

    <string name="hot_title">Từ khoá hot</string>
    <string name="hot_load_error">Không lấy được dữ liệu \nVui lòng kiểm tra kết nối internet</string>

    <string name="user_title">Đăng nhập để trải nghiệm tốt nhất</string>
    <string name="user_login">Đăng nhập</string>
    <string name="user_register">Đăng ký</string>

</resources>
