<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ccc">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/white">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/padding_default"
                android:background="@android:color/holo_blue_dark"
                android:paddingTop="@dimen/padding_default"
                android:paddingBottom="@dimen/padding_default">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/service_title"
                    android:textColor="#fff"
                    android:layout_marginRight="@dimen/padding_default"
                    android:layout_marginLeft="@dimen/padding_default"
                    style="@style/title_card_black"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_services"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_title"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/padding_default"
                android:padding="@dimen/padding_default"
                android:background="@android:color/white"
                android:gravity="center"
                android:clickable="true">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_tag"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/padding_default"
                    android:layout_marginRight="@dimen/padding_default"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bank_title"
                        style="@style/title_card_white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bank_detail"/>
                </LinearLayout>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right_black_24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/padding_default"
                android:paddingTop="@dimen/padding_default"
                android:paddingBottom="@dimen/padding_default"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_title"
                    android:layout_marginLeft="@dimen/padding_default"
                    android:layout_marginRight="@dimen/padding_default"
                    style="@style/title_card_white"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_key_hot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_title"/>

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/padding_default"
                android:padding="@dimen/padding_default"
                android:background="@android:color/white"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_title"
                        style="@style/title_card_white"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/padding_default">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_login"
                            style="@style/Widget.AppCompat.Button.Colored"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_register"
                            style="@style/Widget.AppCompat.Button.Colored"/>
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_cart"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/padding_default"
                android:background="@android:color/white">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>